<resources>
    <string name="app_name">Kontroller</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="ip">IP Address</string>
    <string name="prompt_uri">RTSP Stream URI *</string>
    <string name="visca_port">VISCA Port</string>
    <string name="action_login"> Login</string>
    <string name="device_not_registered">Device is not yet registered. Please register it first.</string>
    <string name="action_logout">Logout</string>
    <string name="action_register_short">Register</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="online_status">"Device is online"</string>
    <string name="login_failed">"Device logging failed."</string>
    <string name="logout_failed">"Device logout failed."</string>
    <string name="offline_status">"Device is offline"</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
</resources>